@@ -23,28 +23,30 @@ let Lexer = class {
 	constructor(filename, code) {
 		this.filename = filename;
 		this.code = code;
-		this.pos = new Position(-1, 0, -1);
+		this.position = new Position(-1, 0, -1);
 
 		this.advance();
 	}
 
 	// Moves to the next character
 	advance(delta = 1) {
-		this.pos.advance(this.at(), delta);
+		let char = this.at();
+		this.position.advance(this.at(), delta);
+		return char;
 	}
 
 	// Returns the current character
 	at(range = 1) {
 		if (range > 1) {
-			return this.code.substr(this.pos.index, 1);
+			return this.code.substr(this.position.index, 1);
 		}
 
-		return this.code[this.pos.index];
+		return this.code[this.position.index];
 	}
 
 	// Checks if the position has not reached the length of the code
 	isEndOfFile() {
-		return this.pos.index >= this.code.length;
+		return this.position.index >= this.code.length;
 	}
 
 	// -------------------------------------------------------------------------------
@@ -54,22 +56,36 @@ let Lexer = class {
 		let listToken = [];
 
 		while (!this.isEndOfFile()) {
-			let leftPos = this.pos.clone();
+			let leftPos = this.position.clone();
 			let char = this.at();
-			let token = this.checkChar(char);
+			let token = this.checkChar(char, leftPos);
+			let skip = token == "skip";
 
+			if (skip) {
+				this.advance();
+				continue;
+			}
+
+			// Checking if the lexer has noticed and made a token
 			if (!token) {
 				this.advance();
-				let rightPos = this.pos.clone();
+				let rightPos = this.position.clone();
 
+				// Returning an "Undefined character" error
 				let error = new Error(this.filename, {left: leftPos, right: rightPos}, `Undefined character '${char}'`);
 				return new LexerResult().failure(error);
 			}
 
+			this.advance();
+
+			if (!token.leftPos)
+				token.setPos().left(leftPos);
+
+			if (!token.rightPos)
+				token.setPos().right(this.position.clone());
+
 			// Push the token to the tokens list
 			listToken.push(token);
-
-			this.advance();
 		}
 
 		return new LexerResult().success(listToken);
@@ -82,6 +98,8 @@ let Lexer = class {
 
 		if ((" \t\r\n").includes(char)) {
 			// Skip
+			return "skip";
+
 		} else if (("+-*/%").includes(char)) {
 			return new Token(Token.Type.Operator, char);
 
@@ -113,10 +131,79 @@ let Lexer = class {
 
 			else if (char == "|")
 				return new Token(Token.Type.Pipe);
+
+		// TODO: Create a table for string matches
+		} else if (("1234567890").includes(char)) {
+			return this.makeNumber();
+		} else if (("\"'`").includes(char)) {
+			return this.makeString();
+		} else if (("abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_").includes(char)) {
+			return this.makeIdentifier();
 		}
 
 		// Return nothing
 		return ;
+	}
+
+	// -------------------------------------------------------------------------------
+
+	makeNumber() {
+		let leftPos = this.position.clone();
+		let numStr = "";
+		let dot = false;
+
+		// TODO: Create a table for string matches
+		while (!this.isEndOfFile() && ("1234567890.").includes(this.at())) {
+			let char = this.at();
+
+			// TODO: Optimize this
+			if (char == ".") {
+				if (dot) break;
+				dot = true;
+				numStr += ".";
+			} else {
+				numStr += char;
+			}
+
+			this.advance();
+		}
+
+		let rightPos = this.position.clone();
+		this.advance(-1);
+
+		return new Token(Token.Type.Number, Number(numStr)).setPos(leftPos, rightPos);
+	}
+
+	makeString() {
+		let leftPos = this.position.clone();
+		let quote = this.advance();
+		let str = "";
+
+		// TODO: Add escape characters support
+
+		while (!this.isEndOfFile() && this.at() != quote) {
+			let char = this.advance();
+			str += char;
+		}
+
+		let rightPos = this.position.clone();
+		return new Token(Token.Type.String, str).setPos(leftPos, rightPos);
+	}
+
+	makeIdentifier() {
+		let leftPos = this.position.clone();
+		let identStr = "";
+
+		// TODO: Create a table for string matches
+		while (!this.isEndOfFile() && ("abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_" + "1234567890").includes(this.at())) {
+			let char = this.advance();
+			identStr += char;
+		}
+
+		let rightPos = this.position.clone();
+		this.advance(-1);
+
+		return new Token(Token.Type.Identifier, identStr).setPos(leftPos, rightPos);
 	}
 }
 
