@@ -1,1 +1,4 @@
-()[]{}.,:;&|
+2+4 - 5;
+"lol 'a'";
+lol_fooBar;
+x1, x2;
